# ocaml-shades

./: .gitignore  Changes  LICENSE  demo.js  dune-project  index.html  palettes.opam  readme.md  shade.opam  shades.opam
examples/: dune  example.ml
lib/: dune  palettes.mli  shade.ml
